--- a/index.html
+++ b/index.html
@@ -6,23 +6,20 @@
 	<body>
 		<nav>
     		<ul>
-        		<li><a href="/">Home</a></li>
-	        	<li><a href="/about">About</a></li>
-        		<li><a href="/cv">CV</a></li>
-        		<li><a href="/blog">Blog</a></li>
+        		<li><a href="/">panda</a></li>
+	        	<li><a href="/about">is</a></li>
+        		<li><a href="/cv">a</a></li>
+        		<li><a href="/blog">furry</a></li>
     		</ul>
 		</nav>
 		<div class="container">
     		<div class="blurb">
-        		<h1>Test</h1>
-				<p>Test</a></p>
+        		<h1>pandapc is a furry</h1>
+				<p>Panda is a furry</a></p>
     		</div><!-- /.blurb -->
 		</div><!-- /.container -->
 		<footer>
-    		<ul>
-        		<li><a href="mailto:test@test.com">email</a></li>
-        		<li><a href="https://realmofthemadgod.com>github.com/hankquinlan</a></li>
-			</ul>
+
 		</footer>
 	</body>
 </html>
