--- a/index.html
+++ b/index.html
@@ -4,20 +4,9 @@
 		<title>TestIndex</title>
 	</head>
 	<body>
-		<nav>
-    		<ul>
-        		<li><a href="/">panda</a></li>
-	        	<li><a href="/about">is</a></li>
-        		<li><a href="/cv">a</a></li>
-        		<li><a href="/blog">furry</a></li>
-    		</ul>
-		</nav>
-		<div class="container">
-    		<div class="blurb">
-        		<h1>pandapc is a furry</h1>
-				<p>Panda is a furry</a></p>
-    		</div><!-- /.blurb -->
-		</div><!-- /.container -->
+
+		<h1><strong>Panda is furry</strong></h1>
+                <p><img src="https://i.imgur.com/jzIOqWv.png" alt="Girl in a jacket" /></p>
 		<footer>
 
 		</footer>
